--- a/views/institucion/editar.twig
+++ b/views/institucion/editar.twig
@@ -11,19 +11,19 @@
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Nombre *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<input type="text" class="form-control" v-model="model.nombre" placeholder="Nombre" required v-autoname/>
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">RUC *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<input type="text" class="form-control required digits" v-model="model.ruc" placeholder="RUC" v-autoname/>
 							</div>
 						</div>
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Ciudad *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2 required" v-model="model.ciudad" placeholder="Seleccione una opción">
 									<option></option>
 									<option v-for="(v,k) in cat.ciudades" v-html="v" :value="k"></option>
@@ -31,14 +31,14 @@
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Dirección</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<textarea rows="3" v-model="model.direccion" class="form-control" placeholder="Dirección" v-autoname></textarea>
 							</div>
 						</div>
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Paleta *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<div class="input-group">
 									<input type="text" class="form-control required" placeholder="Seleccione una paleta" v-model="paleta_nombre" name="paleta_nombre" id="paleta_nombre" readonly>
 									<input type="hidden" class="form-control" v-model="model.paleta_id" name="paleta_id" id="paleta_id"/>
@@ -52,7 +52,7 @@
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Paleta propia *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2 required" v-autoname v-model="model.paletas_propias" placeholder="Seleccione una opción" v-autoname>
 									<option value="si">SI</option>
 									<option value="no">NO</option>
@@ -62,7 +62,7 @@
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Acceso al sistema *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2" v-model="model.acceso_sistema" placeholder="Acceso al sistema" required v-autoname>
 									<option value="si">SI</option>
 									<option value="no">NO</option>
@@ -70,14 +70,14 @@
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Descripción</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<textarea rows="3" v-model="model.descripcion" class="form-control" placeholder="Descripción" v-autoname></textarea>
 							</div>
 						</div>
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Teléfonos</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<button class="btn btn-sm btn-secondary" type="button" v-on:click="agregarTelefono">
 									<i class="fa fa-plus"></i> Agregar
 								</button>
