--- a/views/paleta/editar.twig
+++ b/views/paleta/editar.twig
@@ -11,19 +11,19 @@
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Número</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<span v-html="model.numero"></span>
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Nombre *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<input type="text" class="form-control" v-model="model.nombre" placeholder="Nombre" required v-autoname/>
 							</div>
 						</div>
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Tipo gestión *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2 required" v-model="model.tipo_gestion" placeholder="Seleccione una opción">
 									<option value=""></option>
 									<option value="cobranza">COBRANZA</option>
@@ -32,7 +32,7 @@
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Tipo perfil *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2 required" v-model="model.tipo_perfil" placeholder="Seleccione una opción">
 									<option value=""></option>
 									<option value="telefonico">TELEFÓNICO</option>
@@ -43,7 +43,7 @@
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Tipo acción *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2 required" v-model="model.tipo_accion" placeholder="Seleccione una opción">
 									<option value=""></option>
 									<option value="accion">ACCIÓN</option>
@@ -54,7 +54,7 @@
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Requiere agendamiento *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2 required" v-model="model.requiere_agendamiento" placeholder="Seleccione una opción">
 									<option value=""></option>
 									<option value="si">SI</option>
@@ -65,7 +65,7 @@
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Requiere ingreso monto *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2 required" v-model="model.requiere_ingreso_monto" placeholder="Seleccione una opción">
 									<option value=""></option>
 									<option value="si">SI</option>
@@ -74,7 +74,7 @@
 							</div>
 
 							<label for="inputName" class="col-md-2 form-label">Requiere ocultar motivo y submotivo *</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<select class="form-control form-select select2 required" v-model="model.requiere_ocultar_motivo" placeholder="Seleccione una opción">
 									<option value=""></option>
 									<option value="si">SI</option>
@@ -85,7 +85,7 @@
 
 						<div class=" row mb-4">
 							<label for="inputName" class="col-md-2 form-label">Observaciones</label>
-							<div class="col-md-4">
+							<div class="col-md-4 col-informacion">
 								<textarea rows="3" v-model="model.observaciones" class="form-control" placeholder="Observaciones" v-autoname></textarea>
 							</div>
 						</div>
