--- a/views/producto/lista.twig
+++ b/views/producto/lista.twig
@@ -19,7 +19,7 @@
 					<a href="{{ root }}/institucion/editar?id={{ l.institucion_id }}" target="_self" style="text-decoration: underline" class="text-primary ms-1">{{ l.institucion_nombre }}</a>
 				</td>
 				<td>
-					<a href="{{ root }}/cliente/editar?id={{ l.cliente_id }}" target="_self" style="text-decoration: underline" class="text-primary ms-1">{{ l.cliente_apellidos }}&nbsp;{{ l.cliente_nombres }}</a>
+					<a href="{{ root }}/cliente/editar?id={{ l.cliente_id }}" target="_self" style="text-decoration: underline" class="text-primary ms-1">{{ l.cliente_nombres }}</a>
 				</td>
 				<td>{{ l.agencia }} </td>
 				<td>{{ l.producto }} </td>
