--- a/views/cliente/lista.twig
+++ b/views/cliente/lista.twig
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-	<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0">
+	<table class="table border text-nowrap text-md-nowrap table-striped table-bordered table-sm mb-0">
 		<thead>
 		<tr>
 			<th>Nombres</th>
